--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,18 +1,65 @@
+.lang_button{
+	height: 40px;
+	width: 40px;
+	border-radius: 20px;
+	margin-left: 10px;
+	border: solid #CACED5; 
+	align-items: center;
+	display: flex;
+	justify-content: center;
+	color: #424242;
+}
+
+.lang_button:hover{
+	background-color: #424242;
+	color: white;
+}
+.shadow_footer{
+	box-shadow: 2px 2px 5px #424242;
+	border-radius: 10px;
+}
+.footer_margin{
+	margin-left: 20px;
+}
+.apps {
+      left: auto !important;
+      right: 0px !important;
+}
 .box{
 	border-radius: 10px;
 	height: 160px;
 	color: white;
+	margin: 10px;
+	align-items: center;
+	display: flex;
+	justify-content: center;
 }
 .tah{
-	background-image: linear-gradient(to right, #3070A1,  #00AEEF );
+	background-image: url("../img/Rectangle 1553.png"), linear-gradient(to right, #3070A1,  #00AEEF );
 }
 .erk{
-	background-image: linear-gradient(to right, #0C961D,  #3CDF50 );
+	background-image: url("../img/Mask Group 1.png"), linear-gradient(to right, #0C961D,  #3CDF50 );
 }
 .ayl{
-	background-image: linear-gradient(to right,#CA47C1, #FF7BB3);
-	background-image: 
+	background-image: url("../img/Mask Group 3.png"), linear-gradient(to right,#CA47C1, #FF7BB3);
 }
-/*.ver_tex{
-	margin-top:50%;
-}*/
+.line{
+	margin-top: 20px; 
+}
+.logo{
+	margin-left: 10%;
+}
+.svg_icon{
+	margin: 10px;
+}
+.button_sorce{
+	border-radius: 30px;
+	height: 60px;
+	width: 250px;
+	border: solid #CACED5;
+	align-items: center;
+	display: flex;
+	justify-content: center;
+
+
+}
